<resources>
    <string name="app_name">Курсы валют</string>
    
    <!--item_bank_exchange_rate-->
    <string name="purchase">Покупка</string>
    <string name="sale">Продажа</string>
    <string name="network_connection_error">Ошибка соединения сети</string>
    <string name="refresh_exchange_rate">Обновить курсы</string>
    <string name="bank_sorting">Сортировка банков</string>
    <string name="dollar">Доллар</string>
    <string name="euro">Евро</string>
    <string name="ruble">Рубль</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="sort">Сортировать</string>
    <string name="cancel_sort">Отменить</string>
    <string name="site">Сайт:</string>
    <string name="phone_number">Телефон:</string>
    <string name="address">Адрес:</string>
    <string name="conversion_dollar">Конвертация Доллары</string>
    <string name="conversion_euro">Конвертация Евро</string>
</resources>
