<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        tools:text="Main title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/purchase_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/purchase"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/ruble_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ruble"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/purchase_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/currency_title" />

    <TextView
        android:id="@+id/currency_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/dollar"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/purchase_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ruble_title" />

    <EditText
        android:id="@+id/ruble_purchase_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxLength="10"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/exchange_rate_color_background"
        android:textCursorDrawable="@null"
        app:layout_constraintTop_toBottomOf="@+id/ruble_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/currency_purchase_et" />

    <EditText
        android:id="@+id/currency_purchase_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxLength="10"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/exchange_rate_color_background"
        android:textCursorDrawable="@null"
        app:layout_constraintTop_toBottomOf="@+id/ruble_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ruble_purchase_et" />

    <TextView
        android:id="@+id/sale_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sale"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/ruble_purchase_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/ruble_sale_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxLength="10"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/exchange_rate_color_background"
        android:textCursorDrawable="@null"
        app:layout_constraintTop_toBottomOf="@+id/sale_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/currency_sale_et" />

    <EditText
        android:id="@+id/currency_sale_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:maxLength="10"
        android:maxLines="1"
        android:inputType="numberDecimal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="4dp"
        android:textColor="@android:color/black"
        android:backgroundTint="@color/exchange_rate_color_background"
        android:textCursorDrawable="@null"
        app:layout_constraintTop_toBottomOf="@+id/sale_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ruble_sale_et" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_close"
        app:backgroundTint="@android:color/black"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ruble_sale_et"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>