<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/exchange_rate_color_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_rounded_rectangle_with_border"
        android:layout_margin="16dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/bank_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            tools:text="Название банка"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <ImageView
            android:id="@+id/bank_logo"
            android:layout_width="116dp"
            android:layout_height="86dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bank_name"
            tools:src="@drawable/absolut_bank_100x63" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/exchange_rate_color_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bank_logo" />

        <TextView
            android:id="@+id/site_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/site"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bank_logo" />

        <TextView
            android:id="@+id/phone_number_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/phone_number"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/site_title"
            app:layout_constraintEnd_toEndOf="@+id/site_title" />

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:text="@string/address"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_title"
            app:layout_constraintEnd_toEndOf="@+id/phone_number_title" />

        <TextView
            android:id="@+id/site_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="Значение22222"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/bank_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/site_title" />

        <TextView
            android:id="@+id/site_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="Значение"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/site_title"
            app:layout_constraintStart_toStartOf="@+id/site_name" />

        <TextView
            android:id="@+id/address_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="Значение"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/site_value"
            app:layout_constraintStart_toStartOf="@+id/site_value" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>